# voicepaste

./: .env.example  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  GUIDANCE.md  GUIDANCE.zh.md  LICENSE  README.md  README.zh.md  biome.json  config.yaml  config.yaml.example  hotwords.json  hotwords.json.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompts.json  prompts.json.example  registry.json  tsconfig.json  vite.config.ts  vitest.config.js  需求文档.md
.claude/skills/github-release/: SKILL.md
.claude/skills/github-release/scripts/: collect-release-artifacts.sh  render-release-notes.sh
.github/workflows/: ci-tauri.yml  ci.yml
assets/: registry.json
docs/: architecture.md  asr-engine.md  changelog.md  changelog.zh.md  configuration.md  development.md  development.zh.md  frontend-ipc.md  hotkey-system.md  liquid-glass-native-refactor-handover.md  llm-integration.md  testing-and-release.md
docs/superpowers/specs/: 2026-06-21-native-overlay-retry-audio-design.md
docs/tests/: performance-report.md
main/: asrService.js  config.js  llmService.js  logger.js  main.js  pasteService.js  statsService.js  updateService.js  windowManager.js
preload/: preload.js
renderer/: app.js  index.html  lucide-icons.js  settings.css  settings.html  settings.js  styles.css  tauri-bridge.js  theme.css
schemas/: hotwords.schema.json  prompts.schema.json  registry.schema.json
scripts/: clean.js  clean.ts  extract-icons.js  pack.js  pack.ts  prepare-assets.js  prepare-assets.ts  tsconfig.json  validate-json.js  validate-json.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  asr.rs  commands.rs  config.rs  cue.rs  hotkey.rs  hotword.rs  lib.rs  llm.rs  logger.rs  main.rs  migration.rs  model.rs  native_audio.rs  overlay.rs  paste.rs  platform.rs  recording.rs  recordings.rs  sound.rs  stats.rs  updater.rs
src-tauri/src/asr/: doubao.rs  mod.rs  sherpa_onnx.rs  stepfun.rs  vad.rs
src-tauri/src/asr/sherpa_onnx/: funasr_nano.rs  mod.rs  offline.rs  online.rs  punct.rs  qwen3_asr.rs  sense_voice.rs  simulated_streaming.rs  vad.rs
src-tauri/src/asr/test/: sherpa_onnx_test.rs
src-tauri/src/asr/tests/: hotkey.rs  llm.rs  sherpa_onnx.rs
src-tauri/src/hotkey/: label.rs  listener.rs  matcher.rs  mod.rs  parse.rs  recorder.rs
src-tauri/src/overlay/: macos.rs  mod.rs  shared.rs
src-tauri/src/recording/: cue.rs  finalize.rs  history.rs  lifecycle.rs  mod.rs  retry.rs  session.rs  wav.rs
src-tauri/src/tests/: asr_doubao.rs  asr_integration.rs  asr_zipformer_zh_en.rs  llm_integration.rs  mod.rs
src-tauri/src/tests/fixtures/: test-audio-hotwords.txt  test-audio-long.txt  test-audio-number.txt  test-audio-short.txt
tauri/icons/: icon.icns
tauri/src/: app_state.rs  paste.rs
web/: app.js  index.html  lucide-icons.js  settings.css  settings.html  settings.js  styles.css  tauri-bridge.js  theme.css
web/src/bridge/: index.ts  overlay.ts  settings.ts
web/src/lib/: audio.ts  clone.ts  model.ts
web/src/overlay/: bridge.ts  index.tsx  overlay.css  types.ts  useOverlayLayout.ts  useOverlayState.ts
web/src/settings/: SettingsApp.tsx  SettingsProvider.tsx  bridge.ts  index.tsx
web/src/settings/components/: Button.tsx  Heatmap.tsx  KeyCap.tsx  Modal.tsx  ModelCard.tsx  SegmentedControl.tsx  Textarea.tsx  ThemeSelector.tsx  UpdateButton.tsx
web/src/settings/layout/: Sidebar.tsx
web/src/settings/lib/: format.ts  hotkey.ts  hotwords.ts  model.ts  sound.ts
web/src/settings/pages/: AboutPage.tsx  AppSettingsPage.tsx  AudioModelPage.tsx  FeedbackPage.tsx  HomePage.tsx  HotkeyPage.tsx  HotwordsPage.tsx  LLMPage.tsx  PermissionsPage.tsx
web/src/settings/types/: hotwords.ts  models.ts  update.ts
web/src/styles/: app.css
web/src/types/: config.ts  hotwords.ts  models.ts  stats.ts  update.ts
web/src/ui/: Overlay.tsx  SettingsApp.tsx  SettingsProvider.tsx  main-overlay.ts
web/src/ui/components/: Badge.tsx  Button.tsx  Heatmap.tsx  Input.tsx  KeyCap.tsx  Modal.tsx  ModelCard.tsx  SegmentedControl.tsx  Textarea.tsx  ThemeSelector.tsx  Toggle.tsx
web/src/ui/layout/: PageLayout.tsx  Sidebar.tsx
web/src/ui/overlay/: OverlayApp.tsx  overlay.css  overlayText.ts  types.ts  useOverlayLayout.ts  useOverlayState.ts  useWaveform.ts
web/src/ui/overlay/components/: Hint.tsx  Indicator.tsx  RetryButton.tsx  Transcript.tsx  Waveform.tsx
web/src/ui/pages/: AboutPage.tsx  AppSettingsPage.tsx  AudioModelPage.tsx  FeedbackPage.tsx  HomePage.tsx  HotkeyPage.tsx  HotwordsPage.tsx  LLMPage.tsx  PermissionsPage.tsx
web/tests/: app.test.js  settings-pure.test.js
web/tests/bridge/: overlay.test.ts  settings.test.ts
web/tests/helpers/: setup-app.js  setup-settings.js
web/tests/lib/: audio.test.ts  format.test.ts  hotkey.test.ts  hotwords.test.ts  model.test.ts
