[package]
name = "voicepaste"
version = "2.0.0"
description = "Voice-to-text input tool — press a hotkey, speak, auto-paste."
authors = ["that-yolanda"]
license = "MIT"
repository = "https://github.com/that-yolanda/voicepaste"
edition = "2021"

[lib]
name = "voicepaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
flate2 = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
dirs = "6"
base64 = "0.22"
regex = "1"
url = "2"
futures-util = "0.3"
# Temporary: track the fork until the Fn flag-bit fix ships on crates.io.
# When that-yolanda/keytap merges fix/macos-fn-flag-bit and publishes a
# release, switch this back to a version line (e.g. keytap = "0.5").
keytap = { git = "https://github.com/that-yolanda/keytap.git", branch = "fix/macos-fn-flag-bit", features = ["serde"] }
async-trait = "0.1"
sherpa-onnx = { version = "1.13", default-features = false }
tar = "0.4"
bzip2 = "0.4"

[features]
default = []
asr-integration = []
llm-integration = []

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
# Native microphone capture is macOS-only (native_audio is cfg(macos)); keeping
# cpal off other targets avoids pulling ALSA (libasound2-dev) into the Linux CI.
cpal = "0.15"
